# AoC

./: .gitignore  README.md  pyproject.toml  solution_template  tasks.py
src/aoc/: __main__.py  utility.py
src/aoc/2024/day_1/: solution.py
src/aoc/2024/day_2/: solution.py
src/aoc/year_2023/day_1/: solution.py
src/aoc/year_2024/day_1/: solution.py
src/aoc/year_2024/day_3/: solution.py
src/aoc/year_2024/day_4/: solution.py
