[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["James Hudson <james.hudson@bridge-u.com>"]
readme = "README.md"
packages = [{"include" = "aoc", "from" = "src"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
ruff = "^0.8.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
